# OpenEnv-AgentOps

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
backend/: baseline_agent.py  hf_app.py  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  router.py
backend/api/endpoints/: environments.py  live_data.py  sessions.py  settings.py
backend/core/: __init__.py  base_env.py  models.py  reward_engine.py  storage.py
backend/data/: settings.json
backend/data/live/: live-tick-b6c2837e95d7.json
backend/data/scenarios/: clinicops.json  cybersoc.json  refundops.json  supportdesk.json
backend/data/sessions/: 06d337ca-a8e6-42f6-bf43-23b66affd88d.json  526072f0-09f1-4043-a20a-9c22f2aee20f.json
backend/environments/: __init__.py  registry.py
backend/environments/clinicops/: __init__.py  env.py
backend/environments/cybersoc/: __init__.py  env.py
backend/environments/refundops/: __init__.py  env.py
backend/environments/supportdesk/: __init__.py  env.py
frontend/: package.json  pnpm-lock.yaml.449869922  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/environments/: page.tsx
frontend/src/app/evaluations/: layout.tsx  page.tsx
frontend/src/app/landing/: layout.tsx  page.tsx
frontend/src/contexts/: SidebarContext.tsx  ThemeContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: agentStore.ts
server/: app.py
(+14 files in other folders)
